--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 	"module": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"dependencies": {
-		"@strumenta/tylasu": "^1.1.4",
+		"@strumenta/tylasu": "^1.1.6",
 		"antlr4ts": "^0.5.0-alpha.4",
 		"assert": "^2.0.0",
 		"process": "^0.11.10",
@@ -56,6 +56,7 @@
 		"build:browser": "cross-env NODE_ENV=production webpack",
 		"build:cjs": "tsc --module commonjs --outDir dist/cjs",
 		"build:esm": "tsc --module es6 --outDir dist/esm",
-		"gen:parser": "antlr4ts -o src/parser -Xexact-output-dir -visitor src/grammar/SimpleLangLexer.g4 src/grammar/SimpleLangParser.g4"
+		"gen:parser": "antlr4ts -o src/parser -Xexact-output-dir -visitor src/grammar/SimpleLangLexer.g4 src/grammar/SimpleLangParser.g4",
+		"lint": "eslint src"
 	}
 }
